# zbank-backend

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  application.py  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: yandex_tracker_workflow.yml
migrations/: env.py
migrations/versions/: a9a99d1b013c_add_user_table.py
zbank/: __init__.py  application.py  database.py  exceptions.py  main.py  router.py
zbank/api/: __init__.py
zbank/api/auth/: __init__.py  exceptions.py  router.py  schemas.py  services.py  utils.py
zbank/api/health/: __init__.py  router.py
zbank/api/root/: router.py
zbank/config/: __init__.py  main.py  swagger.py
zbank/models/: __init__.py  idmixin.py  users.py
