[project]
name = "ZBank"
version = "1.0.0"
description = "Система легкого банкинга zbank"

dependencies = [
    "fastapi~=0.101.0",
    "SQLAlchemy[asyncio]~=2.0.25",
    "pre-commit~=3.3.3",
    "asyncpg~=0.28.0",
    "alembic~=1.11.3",
    "pip-tools~=7.3.0",
    "uvicorn~=0.23.2",
    "python-dotenv~=1.0.0",
    "pydantic-extra-types~=2.1.0",
    "pydantic-settings~=2.0.3",
    "phonenumbers~=8.13.22",
    "pydantic[email]",
    "passlib~=1.7.4",
    "python-jose~=3.3.0",
    'python-dateutil~=2.8.2',
    'python-multipart~=0.0.6',
    'sqlalchemy-file~=0.6.0',
]

[tool.setuptools]
py-modules = []

[tool.isort]
profile = 'black'
line_length = 79
lines_after_imports = 2
lines_between_sections = 1
lines_between_types = 0
force_alphabetical_sort_within_sections = true
ensure_newline_before_comments = true
combine_as_imports = true
combine_star = true
skip_gitignore = true
balanced_wrapping = true
skip = ['.git', '__pycache__', '*.yml.enc']

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = ['.git', '__pycache__', '*.yml.enc']

[tool.flake8]
max-line-length = 79
exclude = ['.git', '__pycache__', '*.yml.enc', '*/migrations/*']
